--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
     <!-- For third-generation iPad with high-resolution Retina display: -->
 
+    <%= javascript_include_tag "https://js.stripe.com/v2/" %>
 
     <%= javascript_include_tag "application" %>
 
