--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <script language="Javascript">
-  Stripe.setPublishableKay("<%= ENV['STRIPE_TEST_PUBLISHABLE_KEY'] %>");
+  Stripe.setPublishableKay(<%= ENV['STRIPE_TEST_PUBLISHABLE_KEY'] %>);
 </script>
 
 <h1><%= t('.sign_up') %></h1>
